5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1850_1274.log
== SUBMITION (2019-06-30 22:00:40) 
-- CODE:
from numpy import *
from numpy.linalg import *
num=int(input("digite os numbers: "))
dc=zeros((num,num),dyte=int)
for i in range (num):
	dc=[i,j]=i+1
	dc=[j,i]=i+1
print(dc) 
-- EXECUTION TIME:
1.27513
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1850/1274/main.py", line 4, in <module>
    dc=zeros((num,num),dyte=int)
TypeError: 'dyte' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:00:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
num=int(input("digite os numbers: "))
dc=zeros((num,num),dyte=int)
for i in range (num):
	dc[i,j]=i+1
	dc[j,i]=i+1
print(dc) 
-- EXECUTION TIME:
1.13317
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1850/1274/main.py", line 4, in <module>
    dc=zeros((num,num),dyte=int)
TypeError: 'dyte' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:01:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
num=int(input("digite os numbers: "))
dc=zeros((num,num),dyte=int)
for i in range (num):
	for j i n range (i,num):
		dc[i,j]=i+1
		dc[j,i]=i+1
print(dc) 
-- EXECUTION TIME:
0.810024
-- ERROR:
  File "/home/codebench/codes/1850/1274/main.py", line 6
    for j i n range (i,num):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:01:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
num=int(input("digite os numbers: "))
dc=zeros((num,num),dyte=int)
for i in range (num):
	for j i n range (i,num):
		dc[i,j]=i+1
		dc[j,i]=i+1
print(dc) 
-- ERROR:
File "XXXX", line 6
    for j i n range (i,num):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:02:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
num=int(input("digite os numbers: "))
dc=zeros((num,num),dyte=int)
for i in range (num):
	for j in range (i,num):
		dc[i,j]=i+1
		dc[j,i]=i+1
print(dc) 
-- EXECUTION TIME:
1.05307
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1850/1274/main.py", line 4, in <module>
    dc=zeros((num,num),dyte=int)
TypeError: 'dyte' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 22:02:17) 
-- CODE:
from numpy import *
from numpy.linalg import *
num=int(input("digite os numbers: "))
dc=zeros((num,num),dyte=int)
for i in range (num):
	for j in range (i,num):
		dc[i,j]=i+1
		dc[j,i]=i+1
print(dc) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:02:48) 
-- CODE:
from numpy import *
from numpy.linalg import *
D=int(input("digite os numbers: "))
dc=zeros((D,D),dyte=int)
for i in range (D):
	for j in range (i,D):
		dc[i,j]=i+1
		dc[j,i]=i+1
print(dc) 
-- EXECUTION TIME:
1.1737
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1850/1274/main.py", line 4, in <module>
    dc=zeros((D,D),dyte=int)
TypeError: 'dyte' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:03:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
num=int(input("digite os numbers: "))
dc=zeros((num,num),dTYPE=int)
for i in range (num):
	for j in range (i,num):
		dc[i,j]=i+1
		dc[j,i]=i+1
print(dc) 
-- EXECUTION TIME:
1.03958
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1850/1274/main.py", line 4, in <module>
    dc=zeros((num,num),dTYPE=int)
TypeError: 'dTYPE' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 22:03:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
num=int(input("digite os numbers: "))
dc=zeros((num,num),dtype=int)
for i in range (num):
	for j in range (i,num):
		dc[i,j]=i+1
		dc[j,i]=i+1
print(dc) 
-- EXECUTION TIME:
1.31245
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
